--- a/src/main/web-app/css/main-layout.css
+++ b/src/main/web-app/css/main-layout.css
@@ -1,6 +1,7 @@
 @CHARSET "ISO-8859-1";
 #header-container{
 	height:75px;
+	background-color: #CC9933;
 	
 }
 #body-container{
@@ -8,5 +9,9 @@
 }
 #footer-container{
 	height:75px;
+	background-color: #66CC99; 
 	
+}
+#primary-navigation-container{
+	background-color: #66CC99; 
 }
