--- a/src/main/web-app/css/familySearch.css
+++ b/src/main/web-app/css/familySearch.css
@@ -1,7 +1,6 @@
 .span-bkg-color1{
-	background-color: #993300;
+	background-color: #CC9933;
 	padding: 20px;
-	text-align: center;
 	font-size: 20px;
 }
 .span-bkg-color{
@@ -9,11 +8,21 @@
 	text-align: center;
 }
 .span-bkg-color{
-	background-color: ##B0B0B0 
+	background-color: #66CC99; 
 }
 
 .span-bkg-color2{
-	background-color: #C0C0C0 ;
-	padding: 140px; 
-	text-align: center;
+	background-color: #F8F8F8   ;
+	padding: 150px; 
+	text-align: left;
+	
 }
+input[type=text] {
+	width: 150px;
+	display: block;
+	margin-bottom: 10px;
+	margin-top: 10px;
+
+	
+}
+
