--- a/src/main/web-app/css/familySearch.css
+++ b/src/main/web-app/css/familySearch.css
@@ -30,10 +30,10 @@ input[type=text] {
 table, th, td{
 	border-collapse: collapse;
 	border: 1px solid black;
-	
-	
+	padding: 20px;
+	text-align: center;
 }
 
 #my_table{
-	margin-top: 50px;
+	margin-top: 30px;
 }
