Arranged the elements: state, country, city and zipcode on top thier corresponding textboxes and drop down menus. Fixed spaces by adding classes to index.css.

--- a/src/main/web-app/css/index.css
+++ b/src/main/web-app/css/index.css
@@ -32,3 +32,18 @@
 .texta{
 	text-align:right;
 }
+.textb{
+	text-align:left;
+}
+.spacing{
+		margin-left: 20px;
+}
+.spacing2{
+		margin-right: 10px;
+}
+.spacing3{
+		margin-left: 40px;
+}
+.spacing4{
+		margin-left:-20px;
+}
