Nearly finishing Upcoming

--- a/src/main/web-app/css/upcomingEvents.css
+++ b/src/main/web-app/css/upcomingEvents.css
@@ -8,6 +8,9 @@
 .textb{
 	text-align:left;
 }
+.textc{
+	text-align: center;
+}
 .spacing{
 		margin-left: 100px;
 }
@@ -22,6 +25,9 @@
 }
 .spacing5{
 		margin-left:60px;
+}
+.spacing6{
+	margin-left: 45px;
 }
 .input-space{
 	width: 200px;
