--- a/src/main/webapp/partials/eventForm.ng.html
+++ b/src/main/webapp/partials/eventForm.ng.html
@@ -22,8 +22,8 @@
                        class="form-control" required>
             </div>
             <div class="col-md-6 align-left">
-                <p ng-show="eventForm.name.$invalid && !eventForm.name.$pristine"
-                   class="help-block">Event name is required</p>
+                <small ng-show="eventForm.name.$invalid && !eventForm.name.$pristine"
+                   class="help-block">Event name is required</small>
             </div>
         </div>
         <br>
@@ -35,9 +35,9 @@
                                   class="form-control" rows="5" cols="70" required></textarea>
             </div>
             <div class="col-md-4 align-left">
-                <p style="color: #a94442"
+                <small style="color: #a94442"
                    ng-show="eventForm.desc.$invalid && !eventForm.desc.$pristine"
-                   class="help-block">Must be filled out</p>
+                   class="help-block">Must be filled out</small>
             </div>
         </div>
         <br>
@@ -50,8 +50,8 @@
                        class="form-control">
             </div>
             <div class="col-md-6 align-left">
-                <p ng-show="eventForm.url.$invalid && !eventForm.url.$pristine"
-                   class="help-block">The URL is invalid</p>
+                <small ng-show="eventForm.url.$invalid && !eventForm.url.$pristine"
+                   class="help-block">The URL is invalid</small>
             </div>
         </div>
         <br> <br>
@@ -101,9 +101,9 @@
                        class="form-control" required>
             </div>
             <div class="col-md-3 align-left">
-                <p
+                <small
                         ng-show="eventForm.address1.$invalid && !eventForm.address1.$pristine"
-                        class="help-block">The event address is required</p>
+                        class="help-block">The event address is required</small>
             </div>
         </div>
         <br>
@@ -116,9 +116,7 @@
                 <input type="text" ng-model="eventUIObject.address2" name="address2"
                        class="form-control">
             </div>
-            <div class="col-md-3 align-left">
-                <p id="street2Error"></p>
-            </div>
+            <div class="col-md-3"></div>
         </div>
         <br>
 
@@ -131,8 +129,8 @@
                            class="form-control" size="15" required>
                 </div>
                 <div class="col-md-1">
-                    <p ng-show="eventForm.city.$invalid && !eventForm.city.$pristine"
-                       class="help-block">The event city is required</p>
+                    <small ng-show="eventForm.city.$invalid && !eventForm.city.$pristine"
+                       class="help-block">The event city is required</small>
                 </div>
 
             </div>
@@ -195,8 +193,8 @@
                     </select>
                 </div>
                 <div class="col-md-4">
-                    <p ng-show="eventForm.state.$invalid && !eventForm.state.$pristine"
-                       class="help-block">The event state is required</p>
+                    <small ng-show="eventForm.state.$invalid && !eventForm.state.$pristine"
+                       class="help-block">The event state is required</small>
                 </div>
             </div>
         </div>
@@ -207,13 +205,19 @@
             <div
                     ng-class="{ 'has-error' : eventForm.zip.$invalid && !eventForm.zip.$pristine }">
                 <div class="col-md-1">
-                    <input type="number" ng-model="eventUIObject.zip" name="zip"
-                           class="form-control" size="15" ng-minlength="5" ng-maxlength="5"
+                    <input type="text" ng-model="eventUIObject.zip" name="zip" ng-pattern="/^[0-9]+$/"
+                           class="form-control" size="15" ng-minlength="5" ng-maxlength="5" maxlength="5"
                            required>
                 </div>
                 <div class="col-md-1">
-                    <p ng-show="eventForm.zip.$invalid && !eventForm.zip.$pristine"
-                       class="help-block">The event zipcode is required</p>
+                    <div class="help-block" ng-show="eventForm.zip.$invalid && eventForm.zip.$dirty">
+                        <small ng-if="eventForm.zip.$error.required || eventForm.zip.$error.minlength || eventForm.zip.$error.maxlength">
+                            Required! <br>
+                        </small>
+                        <small ng-if="eventForm.zip.$error.pattern">
+                            Not a number!
+                        </small>
+                    </div>
                 </div>
 
             </div>
@@ -228,9 +232,9 @@
                     </select>
                 </div>
                 <div class="col-md-3">
-                    <p
+                    <small
                             ng-show="eventForm.country.$invalid && !eventForm.country.$pristine"
-                            class="help-block">The event country is required</p>
+                            class="help-block">The event country is required</small>
                 </div>
 
             </div>
@@ -254,9 +258,9 @@
                         <input type="datetime-local" class="form-control" ng-model="eventUIObject.startDate" name="startDate" required/>
                     </div>
                 <div class="col-md-6 align-left"></div>
-                <p
+                <small
                         ng-show="eventForm.startDate.$invalid && !eventForm.startDate.$pristine"
-                        class="help-block">The event start date is required</p>
+                        class="help-block">The event start date is required</small>
             </div>
         </div>
 
@@ -273,9 +277,9 @@
                            name="endDate" class="form-control" required/>
                 </div>
                 <div class="col-md-6 align-left">
-                    <p
+                    <small
                             ng-show="eventForm.endDate.$invalid && !eventForm.endDate.$pristine"
-                            class="help-block">The event end date is required</p>
+                            class="help-block">The event end date is required</small>
                 </div>
             </div>
         </div>
@@ -293,7 +297,7 @@
 
         <div class="row">
             <div class="col-md-6 col-md-offset-4">
-                <p ng-show="attendeeArray.length == 0 && submitted" style="color: #a94442">An attendee is required</p>
+                <small ng-show="attendeeArray.length == 0 && submitted" style="color: #a94442">An attendee is required</small>
             </div>
             <div class="col-md-2"></div>
         </div>
@@ -327,14 +331,14 @@
         </div>
         <div class="row" style="min-height:20px !important">
             <div class="col-md-3 col-md-offset-3">
-                <p style="color: #a94442"
+                <small style="color: #a94442"
                    ng-show="attendeeForm.name.$invalid && !attendeeForm.name.$pristine"
-                   class="help-block">Attendee name Required</p>
+                   class="help-block">Attendee name Required</small>
             </div>
             <div class="col-md-3">
-                <p style="color: #a94442"
+                <small style="color: #a94442"
                    ng-show="attendeeForm.email.$invalid && !attendeeForm.email.$pristine"
-                   class="help-block">Attendee email Required</p>
+                   class="help-block">Attendee email Required</small>
             </div>
             <div class="col-md-3"></div>
         </div>
