--- a/src/main/webapp/partials/home.ng.html
+++ b/src/main/webapp/partials/home.ng.html
@@ -7,6 +7,18 @@
         </div>
         <div class="col-md-9"></div>
     </div>
+<!--    <div class="row">
+        <div class="col-md-2 col-md-offset-1">
+            <input type="button" name="buton" class="btn btn-primary" ng-click="HttpGet()"
+                   value="test http get"/>
+            <span ng-bind="results"/>
+        </div>
+        <div class="col-md-9">
+            <input type="button" name="buton" class="btn btn-primary" ng-click="HttpPost()"
+                   value="test http post"/>
+            <span ng-bind="results2"/>
+        </div>
+    </div>-->
     <div class="row">
         <div class="col-md-4 family">
             <a ui-sref="familySearch">Family Search</a>
