debugged contacting the web service

--- a/src/main/webapp/partials/userCreated.ng.html
+++ b/src/main/webapp/partials/userCreated.ng.html
@@ -1,5 +1,5 @@
 <div style="height: 300px; width: 100%">
     <div class="col-md-12 align-center">
-            <h>Thanks for signing up</h>
+            <h>Thanks for signing up, {{user.getFirstName()}}</h>
     </div>
 </div>
