started search for user

--- a/src/main/webapp/partials/createUser.ng.html
+++ b/src/main/webapp/partials/createUser.ng.html
@@ -1,4 +1,4 @@
-<div>
+<div class="main-view-container">
     <div class="row">
         <div class="col-md-12 align-center"><h1>Sign up!</h1></div>
     </div>
