--- a/src/main/webapp/partials/home.ng.html
+++ b/src/main/webapp/partials/home.ng.html
@@ -12,7 +12,7 @@
             <a ui-sref="familySearch">Family Search</a>
         </div>
         <div class="col-md-4 join ">
-            <a ui-sref="createUser">Crete User</a>
+            <a ui-sref="createUser">Create User</a>
         </div>
         <div class="col-md-4 upcoming ">
             <a ui-sref="createEvent">Create Event</a>
