Added a testing button for createUser.ng.html and added createUserTest for both

--- a/src/main/webapp/partials/createUser.ng.html
+++ b/src/main/webapp/partials/createUser.ng.html
@@ -375,6 +375,9 @@
                 <input type="submit" class="btn btn-primary" ng-disabled="userForm.$invalid"
                        ng-click="submit(userForm.$valid)"
                        value="Submit">
+
+                <input type="testing" class="btn btn-primary" ng-click="createUserTest()"
+                       value="testing">
             </div>
         </div>
         <br><br>
